--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
       <section v-else>
         <div v-if="loading">Loading ...</div>
         <div v-else>
+          <section class="selection">
+            <select v-model="selected">
+              <option v-for="option in options" v-bind:value="option.value">
+                {{ option.text }}
+              </option>
+            </select>
+          </section>
+
           <div
             v-for="(person, index) in sortedInfo"
             v-if="index <= upperIndex && index >= lowerIndex"
